--- a/quartier/adamville.html
+++ b/quartier/adamville.html
@@ -22,7 +22,7 @@
                 <div class="carte-outer-container">
                     <div class="carte-container">
                         <img src="../images/adamville.webp" alt="carte d'Adamville'" class="carte-img">
-                        <div class="marker-container" id="marker-container-rue-de-birhakeim" data-family="rue-de-birhakeim">
+                        <div class="marker-container" id="marker-container-rue-de-bir-hakeim" data-family="rue-de-bir-hakeim">
                             <img src="../images/marker.webp" alt="Marker Rue de Bir-Hakeim" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-place-du-marechal-juin" data-family="place-du-marechal-juin">
@@ -42,7 +42,7 @@
                         </div>
                     </div>
                     
-                    <div class="famille-info" id="info-rue-de-birhakeim">
+                    <div class="famille-info" id="info-rue-de-bir-hakeim">
                         <h3>La rue de Bir-Hakeim</h3>
                         <img src="images/eglise.webp" alt="Rue de Bir-Hakeim" class="famille-img">
                         <p>La rue de Bir-Hakeim</p>
@@ -68,7 +68,7 @@
                     </div>
                     <div class="famille-info" id="info-avenue-et-place-charles-de-gaulle">
                         <h3>l'Avenue et la Place Charles-de-Gaulle</h3>
-                        <img src="images/le-parc.webp" alt="Avenue et Place Charles-de-Gaulle" class="famille-img">
+                        <img src="../images/charles-de-gaulle.webp" alt="Avenue et Place Charles-de-Gaulle" class="famille-img">
                         <p>Découvrez l'Avenue et la Place Charles-de-Gaulle</p>
                         <a href="../rues/avenue-et-place-charles-de-gaulle.html" class="btn-decouvrir">Découvrez l'Avenue et la Place Charles-de-Gaulle</a>
                     </div>
