--- a/quartier/vieux-saint-maur.html
+++ b/quartier/vieux-saint-maur.html
@@ -35,7 +35,7 @@
                     
                     <div class="famille-info" id="info-avenue-de-la-liberation">
                         <h3>Avenue de la Libération</h3>
-                        <img src="images/eglise.webp" alt="Avenue de la Libération" class="famille-img">
+                        <img src="../images/liberation.webp" alt="Avenue de la Libération" class="famille-img">
                         <p>Découvrez l'avenue de la Libération</p>
                         <a href="../rues/avenue-de-la-liberation.html" class="btn-decouvrir">Découvrez l'avenue de la Libération</a>
                     </div>
