--- a/rues/avenue-et-place-charles-de-gaulle.html
+++ b/rues/avenue-et-place-charles-de-gaulle.html
@@ -20,10 +20,10 @@
             <section class="grid-2">
                 <div class="grid-2-desc scroll">
                     <h3>l'Avenue et la Place Charles-de-Gaulle</h3>
-                    <p>.............................................................................................................................................................................................................</p>
+                    <p>En 1963, la place et l’avenue de la Mairie sont rebaptisées Charles de Gaulle. Symbole de la Résistance, Charles de Gaulle (1890-1970) s’impose comme chef de la France libre après son appel du 18 juin 1940. Président du Comité français de libération nationale (CFLN) puis du gouvernement provisoire de la République française (GPRF), il devient le premier président de la Ve République en 1959.</p>
                 </div>
                 <div class="grid-2-img scroll">
-                    <img src="images/image.jpg" alt="Avenue et Place Charles-de-Gaulle">
+                    <img src="../images/avenue-et-place-charles-de-gaulle.webp" alt="Avenue et Place Charles-de-Gaulle">
                 </div>
             </section>
         </main>
