--- a/rues/avenue-leopold-sedar-senghor.html
+++ b/rues/avenue-leopold-sedar-senghor.html
@@ -20,10 +20,10 @@
             <section class="grid-2">
                 <div class="grid-2-desc scroll">
                     <h3>l'Avenue Léopold-Sédar-Senghor</h3>
-                    <p>.............................................................................................................................................................................................................</p>
+                    <p>Ancien professeur de lettres au lycée Marcelin Berthelot, Léopold Sédar Senghor (1906-2001) combat dans le 31e régiment d’infanterie coloniale. Il échappe à la mort après avoir été fait prisonnier par les Allemands et rejoint ensuite la Résistance.</p>
                 </div>
                 <div class="grid-2-img scroll">
-                    <img src="images/image.jpg" alt="Avenue Léopold-Sédar-Senghor">
+                    <img src="../images/avenue-leopold-sedar-senghor.webp" alt="Avenue Léopold-Sédar-Senghor">
                 </div>
             </section>
         </main>
