--- a/rues/avenue-pierre-brossolette.html
+++ b/rues/avenue-pierre-brossolette.html
@@ -20,10 +20,10 @@
             <section class="grid-2">
                 <div class="grid-2-desc scroll">
                     <h3>l'Avenue Pierre-Brossolette</h3>
-                    <p>.............................................................................................................................................................................................................</p>
+                    <p>Pierre Brossolette (1903-1944) est un journaliste et résistant. Arrêté par la Gestapo en 1944, il est torturé pendant plusieurs jours par les nazis. Il préfère se suicider plutôt que de dénoncer d’autres résistants.</p>
                 </div>
                 <div class="grid-2-img scroll">
-                    <img src="images/image.jpg" alt="Avenue Pierre-Brossolette">
+                    <img src="../images/avenue-pierre-brossolette.webp" alt="Avenue Pierre-Brossolette">
                 </div>
             </section>
         </main>
