--- a/rues/boulevard-du-general-giraud.html
+++ b/rues/boulevard-du-general-giraud.html
@@ -23,7 +23,7 @@
                     <p>Le boulevard porte aujourd'hui le nom d'un résistant, le général Henri Giraud. Co-président, avec le général de Gaulle, du Comité français de libération nationale (CFLN), il est aussi plusieurs mois au pouvoir en Afrique française du Nord après le débarquement allié de novembre 1942 et l’assassinat de l’amiral Darlan.</p>
                 </div>
                 <div class="grid-2-img scroll">
-                    <img src="images/image.jpg" alt="Boulevard du Général-Giraud">
+                    <img src="../images/boulevard-du-general-giraud.webp" alt="Boulevard du Général-Giraud">
                 </div>
             </section>
         </main>
