--- a/rues/place-de-stalingrad.html
+++ b/rues/place-de-stalingrad.html
@@ -23,7 +23,7 @@
                     <p>En 1946, la place du Marché a été renommée la place de Stalingrad. Si la bataille de Stalingrad en URSS se solde par un lourd bilan humain, c’est une victoire décisive pour les Alliés face à l’Axe. On peut aussi penser que la décision de changer le nom de la place a été influencée par le maire de Saint-Maur-des-Fossés, Jean le Trocquer qui faisait partie de la Section française Internationale Ouvrière (SFIO). </p>
                 </div>
                 <div class="grid-2-img scroll">
-                    <img src="images/image.jpg" alt="Place de Stalingrad">
+                    <img src="../images/place-de-stalingrad.webp" alt="Place de Stalingrad">
                 </div>
             </section>
         </main>
