--- a/rues/quai-winston-churchill.html
+++ b/rues/quai-winston-churchill.html
@@ -20,10 +20,10 @@
             <section class="grid-2">
                 <div class="grid-2-desc scroll">
                     <h3>le Quai Winston Churchill</h3>
-                    <p>.............................................................................................................................................................................................................</p>
+                    <p>En 1965, l’année de la mort de Winston Churchill, le quai de la Varenne est rebaptisé au nom de cet homme politique britannique. Premier ministre de 1940 à 1945, puis de 1951 à 1955, il fut l'un des protagonistes de la victoire des Alliés sur les puissances de l'Axe pendant la Seconde Guerre mondiale. </p>
                 </div>
                 <div class="grid-2-img scroll">
-                    <img src="images/image.jpg" alt="Quai Winston Churchill">
+                    <img src="../images/quai-winston-churchill.webp" alt="Quai Winston Churchill">
                 </div>
             </section>
         </main>
