--- a/rues/rue-andre-bollier.html
+++ b/rues/rue-andre-bollier.html
@@ -20,10 +20,10 @@
             <section class="grid-2">
                 <div class="grid-2-desc scroll">
                     <h3>la Rue André-Bollier</h3>
-                    <p>.............................................................................................................................................................................................................</p>
+                    <p>André Bollier (1920-1944) est un résistant saint-maurien qui a fréquenté le lycée D’Arsonval entre 1931 et 1935. Après des études à l’Ecole polytechnique, il s’implique dans le mouvement de résistance Combat au péril de sa vie. Il meurt, en effet, dans une attaque de la Gestapo et des miliciens contre son imprimerie clandestine.</p>
                 </div>
                 <div class="grid-2-img scroll">
-                    <img src="images/image.jpg" alt="Rue André-Bollier">
+                    <img src="../images/rue-andre-bollier.webp" alt="Rue André-Bollier">
                 </div>
             </section>
         </main>
