--- a/rues/rue-de-bir-hakeim.html
+++ b/rues/rue-de-bir-hakeim.html
@@ -23,7 +23,7 @@
                     <p>La bataille de Bir-Hakeim rappelle le combat acharné de la Résistance. La 1re Brigade française Libre composée de 3 700 hommes impose d’importantes pertes aux 37 000 soldats des Deutsches Afrikakorps et Corpo d’armata. On compte par exemple 170 morts pour la BFL contre 3 300 blessés, tués ou disparus pour les forces nazies.</p>
                 </div>
                 <div class="grid-2-img scroll">
-                    <img src="images/image.jpg" alt="Rue de Bir-Hakeim">
+                    <img src="../images/rue-de-bir-hakeim.webp" alt="Rue de Bir-Hakeim">
                 </div>
             </section>
         </main>
