--- a/rues/rue-de-metz.html
+++ b/rues/rue-de-metz.html
@@ -20,10 +20,10 @@
             <section class="grid-2">
                 <div class="grid-2-desc scroll">
                     <h3>La rue de Metz</h3>
-                    <p>.............................................................................................................................................................................................................</p>
+                    <p>Metz est une ville de Lorraine annexée par l’Allemagne de 1871 à 1918 et de 1940 à 1944.</p>
                 </div>
                 <div class="grid-2-img scroll">
-                    <img src="images/image.jpg" alt="rue de Metz">
+                    <img src="../images/rue-de-metz.webp" alt="rue de Metz">
                 </div>
             </section>
         </main>
