--- a/rues/rue-edouard-vallerand.html
+++ b/rues/rue-edouard-vallerand.html
@@ -20,7 +20,7 @@
             <section class="grid-2">
                 <div class="grid-2-desc scroll">
                     <h3>la Rue Edouard-Vallerand</h3>
-                    <p>.............................................................................................................................................................................................................</p>
+                    <p>Edouard Vallerand (1912-1943) est un militant communiste saint-maurien. D’abord arrêté en 1940 à Saint-Maur-des-Fossés lors d’une rafle des opposants politiques, il est finalement fusillé au Mont Valérien en 1943. L’ancienne rue Révol où il vivait porte aujourd’hui son nom.</p>
                 </div>
                 <div class="grid-2-img scroll">
                     <img src="images/image.jpg" alt="Rue Edouard-Vallerand">
