--- a/rues/rue-politzer.html
+++ b/rues/rue-politzer.html
@@ -23,7 +23,7 @@
                     <p>George Politzer, philosophe communiste et résistant, fut torturé pendant trois mois puis fusillé le 23 mai 1942. La rue Pinet qui longeait le lycée Marcelin Berthelot où Georges Politzer enseigna la philosophie de 1938 à 1942 fut rebaptisée Politzer dès 1945.</p>
                 </div>
                 <div class="grid-2-img scroll">
-                    <img src="images/image.jpg" alt="Rue Politzer">
+                    <img src="../images/rue-politzer.webp" alt="Rue Politzer">
                 </div>
             </section>
         </main>
