--- a/rues/square-emilie-tillion.html
+++ b/rues/square-emilie-tillion.html
@@ -20,10 +20,10 @@
             <section class="grid-2">
                 <div class="grid-2-desc scroll">
                     <h3>le Square Émilie-Tillion</h3>
-                    <p>.............................................................................................................................................................................................................</p>
+                    <p>Emilie Tillion (1876-1945) est une résistante saint-maurienne. Comme sa fille, Germaine Tillion (1907-2008), elle fait partie d’un groupe de résistants, le réseau du musée de l’Homme. Elle est déportée à Ravensbrück où elle meurt le 2 mars 1945.</p>
                 </div>
                 <div class="grid-2-img scroll">
-                    <img src="images/image.jpg" alt="Square Émilie-Tillion">
+                    <img src="../images/square-emilile-tillion.webp" alt="Square Émilie-Tillion">
                 </div>
             </section>
         </main>
