--- a/rues/square-et-avenue-darromanches.html
+++ b/rues/square-et-avenue-darromanches.html
@@ -20,10 +20,10 @@
             <section class="grid-2">
                 <div class="grid-2-desc scroll">
                     <h3>Le Square et l'Avenue d’Arromanches</h3>
-                    <p>.............................................................................................................................................................................................................</p>
+                    <p>Autrefois avenue Labatut, elle prit en 1949 le nom d’une ville normande : Arromanches. C'est face à ce village que, juste après le débarquement du 6 juin 1944, les Alliés établirent le port Mulberry B, un port artificiel provisoire, afin de permettre de débarquer du matériel lourd, sans attendre la conquête de ports en eaux profondes, tels que ceux du Havre ou de Cherbourg. Ce port fut mis en service le 14 juin.</p>
                 </div>
                 <div class="grid-2-img scroll">
-                    <img src="images/image.jpg" alt="Square et Avenue d’Arromanches">
+                    <img src="../images/square-et-avenue-darromanches.webp" alt="Square et Avenue d’Arromanches">
                 </div>
             </section>
         </main>
