--- a/quartier/champignol.html
+++ b/quartier/champignol.html
@@ -29,7 +29,7 @@
 
                     <div class="famille-info" id="info-avenue-pierre-semard">
                         <h3>l'Avenue Pierre-Sémard</h3>
-                        <img src="images/eglise.webp" alt="Avenue Pierre-Sémard" class="famille-img">
+                        <img src="../images/pierre-semard.webp" alt="Avenue Pierre-Sémard" class="famille-img">
                         <p>Découvrez l'Avenue Pierre-Sémard</p>
                         <a href="../rues/avenue-pierre-semard.html" class="btn-decouvrir">Découvrez l'Avenue Pierre-Sémard</a>
                     </div>
