--- a/quartier/la-varenne.html
+++ b/quartier/la-varenne.html
@@ -42,13 +42,13 @@
                     </div>
                     <div class="famille-info" id="info-place-jean-moulin">
                         <h3>Place Jean-Moulin</h3>
-                        <img src="../images/" alt="Place Jean-Moulin" class="famille-img">
+                        <img src="../images/jean-moulin.webp" alt="Place Jean-Moulin" class="famille-img">
                         <p>Place Jean-Moulin</p>
                         <a href="../rues/place-jean-moulin.html" class="btn-decouvrir">Découvrez la Place Jean-Moulin</a>
                     </div>
                     <div class="famille-info" id="info-quai-winston-churchill">
                         <h3>Quai Winston Churchill</h3>
-                        <img src="../images/" alt="Quai Winston Churchill" class="famille-img">
+                        <img src="../images/churchill.webp" alt="Quai Winston Churchill" class="famille-img">
                         <p>Quai Winston Churchill</p>
                         <a href="../rues/quai-winston-churchill.html" class="btn-decouvrir">Découvrez le Quai Winston Churchill</a>
                     </div>
