--- a/rues/avenue-de-la-liberation.html
+++ b/rues/avenue-de-la-liberation.html
@@ -23,7 +23,7 @@
                     <p>En 1947, la rue du Petit-Parc a été baptisée avenue de la Libération en souvenir des combats meurtriers opposant les membres du bataillon HOCHE et les occupants allemands pour la Libération de Saint-Maur-des-Fossés en août 1944.</p>
                 </div>
                 <div class="grid-2-img scroll">
-                    <img src="images/image.jpg" alt="Avenue de la Libération">
+                    <img src="../images/avenue-de-la-liberation.webp" alt="Avenue de la Libération">
                 </div>
             </section>
         </main>
