--- a/rues/carrefour-du-huit-mai-1945.html
+++ b/rues/carrefour-du-huit-mai-1945.html
@@ -20,10 +20,10 @@
             <section class="grid-2">
                 <div class="grid-2-desc scroll">
                     <h3>Le Carrefour du Huit-Mai 1945</h3>
-                    <p>.............................................................................................................................................................................................................</p>
+                    <p>En 1964, le carrefour de la Porte-Blanche devient le carrefour du Huit-Mai 1945. Cela fait bien évidemment référence à la date de la capitulation allemande à la fin de la Seconde Guerre mondiale.</p>
                 </div>
                 <div class="grid-2-img scroll">
-                    <img src="images/image.jpg" alt="Carrefour du Huit-Mai 1945">
+                    <img src="../images/carrefour-du-huit-mai-1945.webp" alt="Carrefour du Huit-Mai 1945">
                 </div>
             </section>
         </main>
