--- a/rues/place-de-la-resistance.html
+++ b/rues/place-de-la-resistance.html
@@ -23,7 +23,7 @@
                     <p>C’est le ministre de la Reconstruction qui donne le nom place de la Résistance. Cette place a, en effet, été le témoin de combats de Libération de la ville au cours desquels trois Saint-Mauriens ont perdu la vie.</p>
                 </div>
                 <div class="grid-2-img scroll">
-                    <img src="images/image.jpg" alt="Place de la Résistance">
+                    <img src="../images/place-de-la-resistance.webp" alt="Place de la Résistance">
                 </div>
             </section>
         </main>
