--- a/quartier/adamville.html
+++ b/quartier/adamville.html
@@ -56,7 +56,7 @@
                     </div>
                     <div class="famille-info" id="info-rue-edouard-vallerand">
                         <h3>La Rue Edouard-Vallerand</h3>
-                        <img src="images/le-parc.webp" alt="Rue Edouard-Vallerand" class="famille-img">
+                        <img src="../images/edouard-vallerand.webp" alt="Rue Edouard-Vallerand" class="famille-img">
                         <p>Découvrez la Rue Edouard-Vallerand</p>
                         <a href="../rues/rue-edouard-vallerand.html" class="btn-decouvrir">Découvrez la Rue Edouard-Vallerand</a>
                     </div>
