--- a/quartier/adamville.html
+++ b/quartier/adamville.html
@@ -29,7 +29,7 @@
                             <img src="../images/marker.webp" alt="Marker Place du Maréchal-Juin" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-rue-edouard-vallerand" data-family="rue-edouard-vallerand">
-                            <img src="../images/marker.webp" alt="Marker Rue Edouard-Vallerand" class="marker">
+                            <img src="../images/marker.webp" alt="Marker Rue Edouard Vallerand" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-carrefour-du-huit-mai-1945" data-family="carrefour-du-huit-mai-1945">
                             <img src="../images/marker.webp" alt="Marker Carrefour du Huit-Mai 1945" class="marker">
@@ -44,7 +44,7 @@
                     
                     <div class="famille-info" id="info-rue-de-bir-hakeim">
                         <h3>La rue de Bir-Hakeim</h3>
-                        <img src="images/eglise.webp" alt="Rue de Bir-Hakeim" class="famille-img">
+                        <img src="../images/bir-hakeim.webp" alt="Rue de Bir-Hakeim" class="famille-img">
                         <p>La rue de Bir-Hakeim</p>
                         <a href="../rues/rue-de-bir-hakeim.html" class="btn-decouvrir">Découvrez la rue de Bir-Hakeim</a>
                     </div>
@@ -55,10 +55,10 @@
                         <a href="../rues/place-du-marechal-juin.html" class="btn-decouvrir">Découvrez la Place du Maréchal-Juin</a>
                     </div>
                     <div class="famille-info" id="info-rue-edouard-vallerand">
-                        <h3>La Rue Edouard-Vallerand</h3>
-                        <img src="../images/edouard-vallerand.webp" alt="Rue Edouard-Vallerand" class="famille-img">
-                        <p>Découvrez la Rue Edouard-Vallerand</p>
-                        <a href="../rues/rue-edouard-vallerand.html" class="btn-decouvrir">Découvrez la Rue Edouard-Vallerand</a>
+                        <h3>La Rue Edouard Vallerand</h3>
+                        <img src="../images/edouard-vallerand.webp" alt="Rue Edouard Vallerand" class="famille-img">
+                        <p>Découvrez la Rue Edouard Vallerand</p>
+                        <a href="../rues/rue-edouard-vallerand.html" class="btn-decouvrir">Découvrez la Rue Edouard Vallerand</a>
                     </div>
                     <div class="famille-info" id="info-carrefour-du-huit-mai-1945">
                         <h3>Le Carrefour du Huit-Mai 1945</h3>
