--- a/quartier/le-parc-saint-maur.html
+++ b/quartier/le-parc-saint-maur.html
@@ -56,7 +56,7 @@
                     </div>
                     <div class="famille-info" id="info-square-emilie-tillion">
                         <h3>le Square Émilie-Tillion</h3>
-                        <img src="images/le-parc.webp" alt="Square Émilie-Tillion" class="famille-img">
+                        <img src="../images/emilie-tillion.webp" alt="Square Émilie-Tillion" class="famille-img">
                         <p>Découvrez le Square Émilie-Tillion</p>
                         <a href="../rues/square-emilie-tillion.html" class="btn-decouvrir">Découvrez le Square Émilie-Tillion</a>
                     </div>
