--- a/quartier/saint-maur-creteil.html
+++ b/quartier/saint-maur-creteil.html
@@ -35,19 +35,19 @@
                     
                     <div class="famille-info" id="info-place-de-la-resistance">
                         <h3>La place de la  Résistance</h3>
-                        <img src="images/eglise.webp" alt="Place de la Résistance" class="famille-img">
+                        <img src="../images/resistance.webp" alt="Place de la Résistance" class="famille-img">
                         <p>Découvrez la place de la Résistance</p>
                         <a href="../rues/place-de-la-resistance.html" class="btn-decouvrir">Découvrez La place de la Résistance</a>
                     </div>
                     <div class="famille-info" id="info-rue-andre-bollier">
                         <h3>La rue André Bollier</h3>
-                        <img src="images/eglise.webp" alt="Rue André Bollier" class="famille-img">
+                        <img src="../images/andre-bollier.webp" alt="Rue André Bollier" class="famille-img">
                         <p>Découvrez la rue André Bollier</p>
                         <a href="../rues/rue-andre-bollier.html" class="btn-decouvrir">Découvrez la rue André Bollier</a>
                     </div>
                     <div class="famille-info" id="info-rue-politzer">
                         <h3>La Rue Politzer</h3>
-                        <img src="images/eglise.webp" alt="Rue Politzer" class="famille-img">
+                        <img src="../images/politzer.webp" alt="Rue Politzer" class="famille-img">
                         <p>Découvrez la Rue Politzer</p>
                         <a href="../rues/rue-politzer.html" class="btn-decouvrir">Découvrez la Rue Politzer</a>
                     </div>
