--- a/rues/rue-edouard-vallerand.html
+++ b/rues/rue-edouard-vallerand.html
@@ -10,7 +10,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
         <meta name="description" content="Découvrer la carte de Saint-Maur">
-        <title>la Rue Edouard-Vallerand</title>
+        <title>la Rue Edouard Vallerand</title>
     </head>
 
 
@@ -19,11 +19,11 @@
             <a href="../quartier/adamville.html" class="btn-retour" id="btn-retour-accueil">Retour à la carte</a>
             <section class="grid-2">
                 <div class="grid-2-desc scroll">
-                    <h3>la Rue Edouard-Vallerand</h3>
+                    <h3>la Rue Edouard Vallerand</h3>
                     <p>Edouard Vallerand (1912-1943) est un militant communiste saint-maurien. D’abord arrêté en 1940 à Saint-Maur-des-Fossés lors d’une rafle des opposants politiques, il est finalement fusillé au Mont Valérien en 1943. L’ancienne rue Révol où il vivait porte aujourd’hui son nom.</p>
                 </div>
                 <div class="grid-2-img scroll">
-                    <img src="images/image.jpg" alt="Rue Edouard-Vallerand">
+                    <img src="../images/edouard-vallerand.webp" alt="Rue Edouard Vallerand">
                 </div>
             </section>
         </main>
